# stock-portfolio-dashboard

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  start-backend.ps1  start-dev.ps1  stop-dev.ps1
backend/: .gitignore  AUTHENTICATION_ROUTES.md  Dockerfile  JWT_SETUP.md  README.md  REPOSITORY_MIGRATION_COMPLETE.md  REPOSITORY_PATTERN_COMPLETE.md  REPOSITORY_PATTERN_IMPLEMENTATION.md  config.py  conftest.py  container.py  generate_dev_token.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.new.txt  requirements.txt  routes.py  routes_market.py  routes_portfolio.py  routes_websocket.py  run_integration_tests.py
backend/api/: __init__.py  dependencies.py  versioning.py
backend/common/: README.md  __init__.py  exceptions.py
backend/database/: __init__.py  database.py  models.py
backend/docs/: README.Auth.md  README.Cache.md  README.Domains.md  README.Formatter.md  README.Health.md  README.Integration.md  README.Versioning.md  README.WebSocket.md  README.md
backend/gateway/: cache.py  formatter.py  health.py  websocket_manager.py
backend/infrastructure/: __init__.py
backend/middleware/: auth.py  logging.py  versioning.py
backend/seed/: README.md  __init__.py  run_seed.py  seed_data.py  seed_database.py
backend/tests/: conftest.py  conftest_integration.py  integration_test_market.py  integration_test_portfolio.py  old_unit_test_portfolio_cache_invalidation.py  test_alert_publisher.py  test_auth.py  test_cache.py  test_config.py  test_exceptions.py  test_fixtures.py  test_formatter.py  test_fundamentals_adapter.py  test_health.py  test_logging_middleware.py  test_main_routes.py  test_market_data_service.py  test_market_routes.py  test_performance_calculator.py  test_portfolio_routes.py  test_portfolio_service.py  test_price_event_consumer.py  test_price_publisher.py  test_pricing_adapter.py  test_run_seed.py  test_seed_data.py  test_seed_database.py  (+3 more)
(+106 files in other folders)
